# nidrs-quickstart-template

./: Cargo.toml  README.md
apps/app/: Cargo.toml
apps/app/src/: main.rs
apps/app/src/app/: controller.rs  mod.rs
apps/app/src/modules/user/: controller.rs
