[workspace]
members = ["apps/*", "libs/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/nidrs/nidrs.git"
repository = "https://github.com/nidrs/nidrs.git"
license = "MIT"

[workspace.dependencies]
nidrs = { version = "0.2.0", features = ["tower", "serde"] }
nidrs-macro = { version = "0.2.0" }
nidrs-extern = { version = "0.2.0" }

shared = { path = "libs/shared" }
macros = { path = "libs/macros" }
datasets = { path = "libs/datasets" }
